--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     },
     "require": {
         "php": ">=7.1.8",
+        "ext-mongo": "*",
         "alcaeus/mongo-php-adapter": "^1.1",
         "components/jquery": "3.2.1",
         "doctrine/doctrine-bundle": "^1.6",
