--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,8 @@
     "config": {
         "sort-packages": true,
         "platform": {
-            "php": "7.1.8"
+            "php": "7.1.8",
+            "ext-mongodb": "1.2.9"
         }
     },
     "extra": {
