new composer json

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "require": {
         "php": ">=7.1.8",
         "ext-mongodb": ">=1.2.9",
+        "ext-mongo": "*",
         "alcaeus/mongo-php-adapter": "^1.1",
         "components/jquery": "3.2.1",
         "doctrine/doctrine-bundle": "^1.6",
