--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "require": {
         "php": ">=7.1.8",
         "ext-mongodb": ">=1.2.9",
-        "ext-mongo": "*",
+        "ext-mongo": "^1.6.7",
         "alcaeus/mongo-php-adapter": "^1.1.2",
         "components/jquery": "3.2.1",
         "doctrine/doctrine-bundle": "^1.6",
