--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,8 @@
         "symfony/assetic-bundle": "^2.8",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
+        "symfony/property-access": "^3.3",
+        "symfony/serializer": "^3.3",
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.3.*",
         "symfony/web-server-bundle": "^3.3",
