--- a/composer.json
+++ b/composer.json
@@ -70,8 +70,7 @@
     "config": {
         "sort-packages": true,
         "platform": {
-            "php": "7.1.8",
-            "ext-mongodb": "1.2.9"
+            "php": "7.1.8"
         }
     },
     "extra": {
