assetic errors fix

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -87,6 +87,8 @@ swiftmailer:
 assetic:
     debug:          '%kernel.debug%'
     use_controller: '%kernel.debug%'
+    bundles:
+        - AppBundle
     filters:
         cssrewrite: ~
         typescript: 
