--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -88,6 +88,7 @@ assetic:
     debug:          '%kernel.debug%'
     use_controller: '%kernel.debug%'
     bundles:
+        - FrameworkBundle
         - AppBundle
     filters:
         cssrewrite: ~
